--- a/pc_shop/templates/base.html
+++ b/pc_shop/templates/base.html
@@ -12,6 +12,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" rel="stylesheet">
     <!-- Custom CSS -->
     <link href="{% static 'css/styles.css' %}" rel="stylesheet">
+    {% block css %} {% endblock %}
 </head>
 <body>
     <!-- Шапка -->
