Update structure css files

--- a/pc_shop/cart/templates/cart/detail.html
+++ b/pc_shop/cart/templates/cart/detail.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
-
+{% load static %}
+{% block css %} <link rel="stylesheet" href="{% static 'css/cart.css' %}"> {% endblock %}
 {% block content %}
 <!-- Заголовок -->
 <div class="container my-5">
