--- a/pc_shop/products/templates/products/product_detail.html
+++ b/pc_shop/products/templates/products/product_detail.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
-
+{% block css %} <link rel="stylesheet" href="{% static 'css/catalog.css' %}"> {% endblock %}
 {% block content %}
 <!-- Галерея и информация о товаре -->
 <div class="row gx-5">
