--- a/pc_shop/accounts/templates/accounts/login.html
+++ b/pc_shop/accounts/templates/accounts/login.html
@@ -1,29 +1,35 @@
 {% extends 'base.html' %}
-
+{% load static %}
+{% block css %}
+<link rel="stylesheet" href="{% static 'css/accounts.css' %}">
+{% endblock %}
 {% block content %}
-  <div class="row justify-content-center mt-5">
-    <div class="col-md-6">
-      <div class="card shadow">
-        <div class="card-body">
-          <h3 class="card-title text-center mb-4">Вход</h3>
-          <form method="post">
-            {% csrf_token %}
-            {% for field in form %}
+<div class="d-flex align-items-center min-vh-100">
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-md-5">
+        <div class="card shadow auth-form">
+          <div class="card-body">
+            <h3 class="card-title text-center">Вход</h3>
+            <form method="post" class="mt-4">
+              {% csrf_token %}
               <div class="mb-3">
-                {{ field.label_tag }}
-                {{ field }}
-                {% if field.errors %}
-                  <div class="text-danger">{{ field.errors }}</div>
-                {% endif %}
+                <label for="{{ form.username.id_for_label }}" class="form-label">Логин</label>
+                {{ form.username }}
               </div>
-            {% endfor %}
-            <button type="submit" class="btn btn-primary w-100">Войти</button>
-          </form>
-          <div class="text-center mt-3">
-            <a href="{% url 'password_reset' %}">Забыли пароль?</a>
+              <div class="mb-3">
+                <label for="{{ form.password.id_for_label }}" class="form-label">Пароль</label>
+                {{ form.password }}
+              </div>
+              <button type="submit" class="btn btn-primary w-100 mt-4">Войти</button>
+            </form>
+            <div class="text-center mt-3">
+              <a href="{% url 'password_reset' %}">Забыли пароль?</a>
+            </div>
           </div>
         </div>
       </div>
     </div>
   </div>
+</div>
 {% endblock %}
