--- a/pc_shop/cart/templates/cart/checkout.html
+++ b/pc_shop/cart/templates/cart/checkout.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
-
+{% load static %}
+{% block css %} <link rel="stylesheet" href="{% static 'css/cart.css' %}"> {% endblock %}
 {% block content %}
 <div class="container my-5">
     <h1 class="mb-4">Оформление заказа</h1>
