--- a/pc_shop/cart/templates/cart/success.html
+++ b/pc_shop/cart/templates/cart/success.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
-
+{% load static %}
+{% block css %} <link rel="stylesheet" href="{% static 'css/cart.css' %}"> {% endblock %}
 {% block content %}
 <div class="container text-center my-5">
     <div class="card shadow-lg p-5 bg-light">
