--- a/pc_shop/products/templates/products/search_results.html
+++ b/pc_shop/products/templates/products/search_results.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %}
 
 {% block title %}Результаты поиска: {{ query }}{% endblock %}
-
+{% load static %}
+{% block css %} <link rel="stylesheet" href="{% static 'css/catalog.css' %}"> {% endblock %}
 {% block content %}
   <h1>Результаты поиска: "{{ query }}"</h1>
   {% if products.exists %}
