--- a/pc_shop/static/css/styles.css
+++ b/pc_shop/static/css/styles.css
@@ -93,3 +93,14 @@ footer {
 .social-icons a:hover {
     color: var(--secondary);
 }
+
+/* Выделение активной вкладки */
+.nav-link.active {
+    background-color: #34495e;
+    border-radius: 4px;
+    color: white !important;
+}
+
+.nav-link.active:hover {
+    background-color: #2c3e50;
+}
