--- a/pc_shop/accounts/templates/accounts/register.html
+++ b/pc_shop/accounts/templates/accounts/register.html
@@ -5,39 +5,40 @@
 {% endblock %}
 {% block content %}
 <div class="d-flex align-items-center min-vh-100">
-  <div class="container">
-    <div class="row justify-content-center">
-      <div class="col-md-6">
-        <div class="card shadow auth-form">
-          <div class="card-body">
-            <h3 class="card-title text-center">Регистрация</h3>
-            <form method="post" class="mt-4">
-              {% csrf_token %}
-              <div class="mb-3">
-                <label for="{{ form.username.id_for_label }}" class="form-label">Логин</label>
-                {{ form.username }}
-              </div>
-              <div class="mb-3">
-                <label for="{{ form.email.id_for_label }}" class="form-label">Email</label>
-                {{ form.email }}
-              </div>
-              <div class="mb-3">
-                <label for="{{ form.password1.id_for_label }}" class="form-label">Пароль</label>
-                {{ form.password1 }}
-              </div>
-              <div class="mb-3">
-                <label for="{{ form.password2.id_for_label }}" class="form-label">Подтверждение пароля</label>
-                {{ form.password2 }}
-              </div>
-              <button type="submit" class="btn btn-success w-100 mt-4">Зарегистрироваться</button>
-            </form>
-            <div class="text-center mt-3">
-              <a href="{% url 'login' %}">Уже есть аккаунт? Войти</a>
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-6">
+                <div class="card shadow auth-form">
+                    <div class="card-body">
+                        <h3 class="card-title text-center">Регистрация</h3>
+                        <form method="post" class="mt-4">
+                            {% csrf_token %}
+                            <div class="mb-3">
+                                <label for="{{ form.username.id_for_label }}" class="form-label">Логин</label>
+                                {{ form.username }}
+                            </div>
+                            <div class="mb-3">
+                                <label for="{{ form.email.id_for_label }}" class="form-label">Email</label>
+                                {{ form.email }}
+                            </div>
+                            <div class="mb-3">
+                                <label for="{{ form.password1.id_for_label }}" class="form-label">Пароль</label>
+                                {{ form.password1 }}
+                            </div>
+                            <div class="mb-3">
+                                <label for="{{ form.password2.id_for_label }}" class="form-label">Подтверждение
+                                    пароля</label>
+                                {{ form.password2 }}
+                            </div>
+                            <button type="submit" class="btn btn-success w-100 mt-4">Зарегистрироваться</button>
+                        </form>
+                        <div class="text-center mt-3">
+                            <a href="{% url 'login' %}">Уже есть аккаунт? Войти</a>
+                        </div>
+                    </div>
+                </div>
             </div>
-          </div>
         </div>
-      </div>
     </div>
-  </div>
 </div>
 {% endblock %}
