--- a/pc_shop/user_profile/templates/user_profile/edit_profile.html
+++ b/pc_shop/user_profile/templates/user_profile/edit_profile.html
@@ -1,19 +1,61 @@
 {% extends 'base.html' %}
-
+{% load static %}
+{% block css %}
+<link rel="stylesheet" href="{% static 'css/edit_profile.css' %}">
+{% endblock %}
 {% block title %}Редактировать профиль{% endblock %}
 
 {% block content %}
-  <h1>Редактировать профиль</h1>
-  <form method="post">
-    {% csrf_token %}
-    <!-- Форма пользователя -->
-    <h3>Основные данные</h3>
-    {{ user_form.as_p }}
+  <div class="row justify-content-center">
+    <div class="col-md-8">
+      <h2 class="mb-4">Редактировать профиль</h2>
+      <form method="post">
+        {% csrf_token %}
 
-    <!-- Форма профиля -->
-    <h3>Дополнительная информация</h3>
-    {{ profile_form.as_p }}
+        <!-- Основные данные -->
+        <div class="card mb-4">
+          <div class="card-header bg-light">Основная информация</div>
+          <div class="card-body">
+            <div class="row">
+              <div class="col-md-6">
+                {{ user_form.first_name.label_tag }}
+                {{ user_form.first_name }}
+              </div>
+              <div class="col-md-6">
+                {{ user_form.last_name.label_tag }}
+                {{ user_form.last_name }}
+              </div>
+            </div>
+            <div class="mt-3">
+              {{ user_form.email.label_tag }}
+              {{ user_form.email }}
+            </div>
+          </div>
+        </div>
 
-    <button type="submit" class="btn btn-primary">Сохранить</button>
-  </form>
+        <!-- Дополнительная информация -->
+        <div class="card mb-4">
+          <div class="card-header bg-light">Контактные данные</div>
+          <div class="card-body">
+            <div class="row">
+              <div class="col-md-6">
+                {{ profile_form.phone.label_tag }}
+                {{ profile_form.phone }}
+              </div>
+              <div class="col-md-6">
+                {{ profile_form.birth_date.label_tag }}
+                {{ profile_form.birth_date }}
+              </div>
+            </div>
+            <div class="mt-3">
+              {{ profile_form.address.label_tag }}
+              {{ profile_form.address }}
+            </div>
+          </div>
+        </div>
+
+        <button type="submit" class="btn btn-primary">Сохранить изменения</button>
+      </form>
+    </div>
+  </div>
 {% endblock %}
