--- a/pc_shop/accounts/templates/accounts/register.html
+++ b/pc_shop/accounts/templates/accounts/register.html
@@ -7,7 +7,8 @@
 <div class="d-flex align-items-center min-vh-100">
     <div class="container">
         <div class="row justify-content-center">
-            <div class="col-md-6">
+            <!-- Измененный класс колонки -->
+            <div class="col-12 col-md-8 col-lg-6">
                 <div class="card shadow auth-form">
                     <div class="card-body">
                         <h3 class="card-title text-center">Регистрация</h3>
@@ -17,6 +18,7 @@
                                 <label for="{{ form.username.id_for_label }}" class="form-label">Логин</label>
                                 {{ form.username }}
                             </div>
+                            <!-- Все поля теперь растягиваются на 100% -->
                             <div class="mb-3">
                                 <label for="{{ form.email.id_for_label }}" class="form-label">Email</label>
                                 {{ form.email }}
@@ -26,8 +28,7 @@
                                 {{ form.password1 }}
                             </div>
                             <div class="mb-3">
-                                <label for="{{ form.password2.id_for_label }}" class="form-label">Подтверждение
-                                    пароля</label>
+                                <label for="{{ form.password2.id_for_label }}" class="form-label">Подтверждение пароля</label>
                                 {{ form.password2 }}
                             </div>
                             <button type="submit" class="btn btn-success w-100 mt-4">Зарегистрироваться</button>
