--- a/pc_shop/user_profile/templates/user_profile/profile.html
+++ b/pc_shop/user_profile/templates/user_profile/profile.html
@@ -18,7 +18,7 @@
                 <a href="{% url 'wishlist' %}" class="list-group-item list-group-item-action">
                     <i class="fas fa-heart me-2"></i> Список желаний
                 </a>
-                <a href="{% url 'community_builds' %}" class="list-group-item list-group-item-action">
+                <a href="{% url 'user_builds' %}" class="list-group-item list-group-item-action">
                     <i class="fas fa-cubes me-2"></i> Мои сборки
                 </a>
             </div>
