--- a/pc_shop/templates/base.html
+++ b/pc_shop/templates/base.html
@@ -14,7 +14,7 @@
     <link href="{% static 'css/styles.css' %}" rel="stylesheet">
     {% block css %} {% endblock %}
 </head>
-<body class="d-flex flex-column min-vh-100">
+<body class="d-flex flex-column min-vh-100 base-template">
 <!-- Шапка -->
 <header class="navbar navbar-expand-lg navbar-dark bg-dark-blue">
     <div class="container">
