--- a/pc_shop/compare/templates/compare/compare.html
+++ b/pc_shop/compare/templates/compare/compare.html
@@ -1,37 +1,53 @@
 {% extends 'base.html' %}
+{% load static %}
 {% load custom_filters %}
-
+{% block css %}
+<link rel="stylesheet" href="{% static 'css/compare.css' %}">
+{% endblock %}
 {% block title %}Сравнение товаров{% endblock %}
 
 {% block content %}
-  <h1>Сравнение товаров</h1>
+<div class="compare-container">
+  <h1 class="compare-heading">Сравнение товаров</h1>
+
   {% if products %}
-    <table class="table">
-      <thead>
-        <tr>
-          <th>Характеристика</th>
-          {% for product in products %}
-            <th>{{ product.name }}</th>
-          {% endfor %}
-        </tr>
-      </thead>
-      <tbody>
-        {% for group, attrs in grouped_attributes.items %}
+    <div class="table-responsive">
+      <table class="compare-table">
+        <thead>
           <tr>
-            <td colspan="{{ products|length|add:1 }}"><strong>{{ group }}</strong></td>
+            <th class="compare-header">Характеристика</th>
+            {% for product in products %}
+              <th class="product-header">
+                <div class="product-info">
+                  <span>{{ product.name }}</span>
+                  <a href="{% url 'remove_from_compare' product.id %}" class="remove-btn">×</a>
+                </div>
+              </th>
+            {% endfor %}
           </tr>
-          {% for attr_name, values in attrs.items %}
-            <tr>
-              <td>{{ attr_name }}</td>
-              {% for product in products %}
-                <td>{{ values|get_item:product.id }}</td>
-              {% endfor %}
+        </thead>
+        <tbody>
+          {% for group, attrs in grouped_attributes.items %}
+            <tr class="group-row">
+              <td colspan="{{ products|length|add:1 }}">{{ group }}</td>
             </tr>
+            {% for attr_name, values in attrs.items %}
+              <tr class="attr-row">
+                <td class="attr-name">{{ attr_name }}</td>
+                {% for product in products %}
+                  <td class="attr-value">{{ values|get_item:product.id }}</td>
+                {% endfor %}
+              </tr>
+            {% endfor %}
           {% endfor %}
-        {% endfor %}
-      </tbody>
-    </table>
+        </tbody>
+      </table>
+    </div>
   {% else %}
-    <p>Нет товаров для сравнения.</p>
+    <div class="empty-compare">
+      <p>Нет товаров для сравнения.</p>
+      <a href="{% url 'product_list' %}" class="btn btn-primary">Перейти в каталог</a>
+    </div>
   {% endif %}
+</div>
 {% endblock %}
