--- a/pc_shop/configurator/templates/configurator/community_builds.html
+++ b/pc_shop/configurator/templates/configurator/community_builds.html
@@ -1,20 +1,31 @@
 {% extends 'base.html' %}
-
+{% load static %}
+{% block css %}
+<link rel="stylesheet" href="{% static 'css/community_builds.css' %}">
+{% endblock %}
 {% block title %}Сборки сообщества{% endblock %}
 
 {% block content %}
-  <h1>Сборки от пользователей</h1>
-  <div class="row">
+<!-- Добавляем уникальный контейнер -->
+<div class="community-builds-container">
+  <h1 class="builds-heading">Сборки от пользователей</h1>
+
+  <div class="builds-grid">
     {% for build in builds %}
-      <div class="col-md-4 mb-4">
-        <div class="card">
+      <div class="build-card-wrapper">
+        <div class="card build-card">
           <div class="card-body">
             <h5 class="card-title">{{ build.name }}</h5>
             <p class="card-text">{{ build.description|truncatewords:10 }}</p>
-            <a href="{% url 'build_detail' build.id %}" class="btn btn-secondary">Подробнее</a>
+            <div class="build-actions">
+              <a href="{% url 'build_detail' build.id %}" class="btn btn-view">
+                <i class="fas fa-eye"></i> Подробнее
+              </a>
+            </div>
           </div>
         </div>
       </div>
     {% endfor %}
   </div>
+</div>
 {% endblock %}
