--- a/pc_shop/static/css/wishlist/wishlist.css
+++ b/pc_shop/static/css/wishlist/wishlist.css
@@ -24,7 +24,7 @@
 }
 
 .wishlist-page-container .wishlist-heading {
-    color: var(--dark);
+    color: var(--cfg-dark);
     margin-bottom: 3rem;
     text-align: center;
     position: relative;
@@ -86,14 +86,14 @@
 
 .wishlist-page-container .product-name {
     font-size: 1.25rem;
-    color: var(--dark);
+    color: var(--cfg-dark);
     margin-bottom: 0.75rem;
     line-height: 1.4;
     min-height: 60px;
 }
 
 .wishlist-page-container .product-price {
-    color: var(--primary);
+    color: var(--cfg-primary);
     font-weight: 600;
     margin-bottom: auto; /* Прижимаем к низу */
     font-size: 1.1rem;
@@ -122,7 +122,7 @@
     text-align: center;
     padding: 4rem 2rem;
     border-radius: 15px;
-    background: var(--light);
+    background: var(--cfg-light);
     box-shadow: var(--card-shadow);
 }
 
