--- a/pc_shop/cart/templates/cart/checkout.html
+++ b/pc_shop/cart/templates/cart/checkout.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block title %}Оформление заказа{% endblock %}
 {% block css %}
-<link rel="stylesheet" href="{% static 'css/checkout.css' %}">
+<link rel="stylesheet" href="{% static 'css/cart/checkout.css' %}">
 {% endblock %}
 {% block content %}
 <!-- Уникальный контейнер для изоляции стилей -->
