--- a/pc_shop/cart/templates/cart/detail.html
+++ b/pc_shop/cart/templates/cart/detail.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block title %}Корзина{% endblock %}
 {% block css %}
-<link rel="stylesheet" href="{% static 'css/detail.css' %}">
+<link rel="stylesheet" href="{% static 'css/cart/detail.css' %}">
 {% endblock %}
 {% block content %}
 <!-- Уникальный контейнер для изоляции стилей -->
