--- a/pc_shop/cart/templates/cart/success.html
+++ b/pc_shop/cart/templates/cart/success.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block title %}Заказ оформлен{% endblock %}
 {% block css %}
-<link rel="stylesheet" href="{% static 'css/success.css' %}">
+<link rel="stylesheet" href="{% static 'css/cart/success.css' %}">
 {% endblock %}
 {% block content %}
 <!-- Уникальный контейнер для изоляции стилей -->
