--- a/pc_shop/compare/templates/compare/compare.html
+++ b/pc_shop/compare/templates/compare/compare.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% load custom_filters %}
 {% block css %}
-<link rel="stylesheet" href="{% static 'css/compare.css' %}">
+<link rel="stylesheet" href="{% static 'css/compare/compare.css' %}">
 {% endblock %}
 {% block title %}Сравнение товаров{% endblock %}
 
