--- a/pc_shop/configurator/templates/configurator/community_builds.html
+++ b/pc_shop/configurator/templates/configurator/community_builds.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block css %}
-<link rel="stylesheet" href="{% static 'css/community_builds.css' %}">
+<link rel="stylesheet" href="{% static 'css/configurator/community_builds.css' %}">
 {% endblock %}
 {% block title %}Сборки сообщества{% endblock %}
 
