--- a/pc_shop/configurator/templates/configurator/configurator.html
+++ b/pc_shop/configurator/templates/configurator/configurator.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block title %}Конфигуратор ПК | PC Shop{% endblock %}
-{% block css %} <link rel="stylesheet" href="{% static 'css/configurator.css' %}"> {% endblock %}
+{% block css %} <link rel="stylesheet" href="{% static 'css/configurator/configurator.css' %}"> {% endblock %}
 
 {% block content %}
 <!-- Основной контейнер конфигуратора -->
