--- a/pc_shop/products/templates/products/product_detail.html
+++ b/pc_shop/products/templates/products/product_detail.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block css %}
-<link rel="stylesheet" href="{% static 'products/product_detail.css' %}">
+<link rel="stylesheet" href="{% static 'css/products/product_detail.css' %}">
 {% endblock %}
 
 {% block content %}
