--- a/pc_shop/products/templates/products/product_list.html
+++ b/pc_shop/products/templates/products/product_list.html
@@ -3,7 +3,7 @@
 {% load product_filters %}
 {% load static %}
 {% block css %}
-<link rel="stylesheet" href="{% static 'products/product_list.css' %}">
+<link rel="stylesheet" href="{% static 'css/products/product_list.css' %}">
 {% endblock %}
 
 {% block content %}
