--- a/pc_shop/products/templates/products/search_results.html
+++ b/pc_shop/products/templates/products/search_results.html
@@ -3,8 +3,8 @@
 {% load static %}
 {% load product_filters %}
 {% block css %}
-<link rel="stylesheet" href="{% static 'products/product_list.css' %}">
-<link rel="stylesheet" href="{% static 'products/search_results.css' %}">
+<link rel="stylesheet" href="{% static 'css/products/product_list.css' %}">
+<link rel="stylesheet" href="{% static 'css/products/search_results.css' %}">
 {% endblock %}
 {% block content %}
 <!-- Добавляем уникальный контейнер -->
